--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="fragment_register_label">Register</string>
     <string name="fragment_feed_label">Feed</string>
     <string name="fragment_tweet_label">Tweet</string>
+    <string name="fragment_edit_label">Edit</string>
 
     <string name="username">Username</string>
     <string name="email">Email</string>
@@ -19,6 +20,7 @@
 
     <string name="whats_happening">What\'s happening?</string>
     <string name="tweet">tweet</string>
+    <string name="edit">edit</string>
     <string name="count">count</string>
 
     <string name="load_error">There was an error in loading user feed.</string>
